--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 jekyll:
   image: jekyll/jekyll:3.8
-  command: sh -c 'gem install jekyll bundler; bundler; bundle exec jekyll serve -b "" --host 0.0.0.0 --livereload'
+  container_name: jekyll_digappinn
+  command: sh -c 'gem update --system 3.2.3; gem install jekyll bundler; bundler; bundle exec jekyll serve -b "" --host 0.0.0.0 --livereload'
   ports:
     - 4000:4000
   volumes:
