--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@
 title: Ιστοχώρος προβολής πολιτιστικού περιεχομένου
 # email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Ο ιστοχώρος αυτός αναπτύχτηκε από τους ........................
-  στα πλαίσια εργασίας του μαθήματος ............................
-  του ΠΜΣ .................. του Ιονίου Πανεπιστημίου. 
+  Ο ιστοχώρος αυτός αναπτύχτηκε από τον Σπυρίδων Α. Σκιαδόπουλο
+  στα πλαίσια εργασίας του μαθήματος Εργαλεία Προβολής Τουριστικού Προϊόντος
+  του ΠΜΣ Ψηφιακές Εφαρμογές του Ιονίου Πανεπιστημίου. 
 baseurl: "heritage-promotion" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
